# rabbithole

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN.md  README.md  TODO.md  docker-compose.yml  prompt.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lib.rs  main.rs  swarm.rs  transfers.rs
apps/desktop/tests/: swarm_core.rs
apps/loadgen/: Cargo.toml  README.md
apps/loadgen/src/: lib.rs  main.rs  metrics.rs  runner.rs
apps/loadgen/tests/: smoke.rs
apps/server/: Cargo.toml
apps/server-tui/: Cargo.toml
apps/server-tui/src/: console.rs  main.rs
apps/server/src/: admin_store.rs  backup.rs  ctl.rs  doors.rs  fed_catalog.rs  fed_flood.rs  federation.rs  ftn.rs  handlers10.rs  handlers11.rs  handlers12.rs  handlers13.rs  handlers2.rs  handlers3.rs  handlers4.rs  handlers5.rs  handlers6.rs  handlers7.rs  handlers8.rs  handlers9.rs  hotline.rs  http.rs  identity_store.rs  legacy.rs  lib.rs  main.rs  nntp.rs  nntp_feed.rs  portmap.rs  qwk.rs  radio.rs  session.rs  stats.rs  syndication.rs  telnet.rs  well_known.rs  zmodem.rs
apps/server/tests/: e2e.rs  e2e_e2ee_dm.rs  e2e_w102.rs  e2e_w10_ftn.rs  e2e_w10_nntp_feed.rs  e2e_w10_nntps.rs  e2e_w10_qwk.rs  e2e_w10_stats.rs  e2e_w10_syndication.rs  e2e_w114.rs  e2e_w11_radio_source.rs  e2e_w12_resilience.rs  e2e_w13_audit_log.rs  e2e_w13_backup.rs  e2e_w13_chatmod.rs  e2e_w13_hash_denylist.rs  e2e_w13_invite_tree.rs  e2e_w13_moderation.rs  e2e_w13_ratelimit.rs  e2e_w2.rs  e2e_w22.rs  e2e_w22b.rs  e2e_w23.rs  e2e_w31.rs  e2e_w32.rs  e2e_w41.rs  e2e_w42.rs  e2e_w43.rs  e2e_w52.rs  e2e_w53.rs  e2e_w6_bbs.rs  e2e_w6_doors.rs  e2e_w6_legacy.rs  e2e_w6_polish.rs  e2e_w6_zmodem.rs  e2e_w73_hotline.rs  e2e_w74_hotline_news.rs  e2e_w75_hotline_admin.rs  e2e_w76_hotline_rooms.rs  e2e_w77_hotline_transfer.rs  (+6 more)
apps/tracker/: Cargo.toml
apps/tracker/src/: descriptor.rs  gossip.rs  health.rs  htrk.rs  lib.rs  main.rs  registry.rs  service.rs
apps/tracker/tests/: gossip_roundtrip.rs  htrk_roundtrip.rs  index_health.rs
apps/tui/: Cargo.toml
apps/tui/src/: browser.rs  handoff.rs  main.rs  radio.rs
crates/audio/: Cargo.toml
crates/audio/src/: frame.rs  jitter.rs  lib.rs  meter.rs  mixer.rs  station.rs
crates/blobs/: Cargo.toml
crates/blobs/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  client.rs  e2ee.rs  lib.rs  queue.rs  theme.rs
crates/e2ee/: Cargo.toml
crates/e2ee/src/: aead.rs  group.rs  kdf.rs  keys.rs  lib.rs  ratchet.rs  sealed.rs  sig.rs  x3dh.rs
crates/e2ee/tests/: session.rs
crates/federation/: Cargo.toml
crates/federation/src/: attestation.rs  bloom.rs  catalog.rs  dedupe.rs  fanout.rs  floodfill.rs  handshake.rs  lib.rs  policy.rs  redaction.rs  search.rs
crates/identity/: Cargo.toml
crates/identity/src/: keys.rs  lib.rs  password.rs  token.rs  totp.rs
crates/legacy-binkp/: Cargo.toml
crates/legacy-binkp/src/: address.rs  command.rs  cram.rs  frame.rs  lib.rs  session.rs
crates/legacy-binkp/tests/: fuzz.rs  golden.rs
crates/legacy-doors/: Cargo.toml
crates/legacy-doors/src/: bridge.rs  context.rs  datetime.rs  door.rs  door32.rs  door_sys.rs  dorinfo.rs  dropfile.rs  error.rs  lib.rs  node.rs  session.rs  util.rs
crates/legacy-doors/tests/: dropfiles.rs  fuzz.rs  runner.rs
crates/legacy-finger/: Cargo.toml
crates/legacy-finger/src/: directory.rs  lib.rs  query.rs  render.rs  server.rs
crates/legacy-finger/tests/: finger_tcp.rs  fuzz.rs
crates/legacy-hotline/: Cargo.toml
crates/legacy-hotline/src/: access.rs  constants.rs  error.rs  field.rs  flatten.rs  handshake.rs  lib.rs  reassembly.rs  transaction.rs
crates/legacy-hotline/tests/: fuzz_decoders.rs
crates/legacy-icecast/: Cargo.toml
crates/legacy-icecast/src/: admin.rs  http.rs  lib.rs  listener.rs  meta.rs  metaint.rs  metaread.rs  source.rs
crates/legacy-qwk/: Cargo.toml
crates/legacy-qwk/src/: control.rs  error.rs  lib.rs  mbf.rs  messages.rs  model.rs  ndx.rs  packet.rs  qwke.rs  reply.rs  text.rs  zip.rs
crates/legacy-qwk/tests/: messages_golden.rs  packet_round_trip.rs
crates/legacy-telnet/: Cargo.toml
crates/legacy-telnet/src/: auth.rs  encoding.rs  lib.rs  negotiate.rs  proto.rs  shell.rs  stream.rs
crates/legacy-telnet/tests/: fuzz.rs  shell.rs
crates/legacy-zmodem/: Cargo.toml
crates/legacy-zmodem/src/: crc.rs  header.rs  lib.rs  session.rs  subpacket.rs  zdle.rs  zfile.rs
crates/legacy-zmodem/tests/: fuzz.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs  quic.rs  tls.rs  ws.rs
crates/net/tests/: loopback.rs  quic_migration.rs
crates/portmap/: Cargo.toml
crates/portmap/src/: lib.rs  mapper.rs  natpmp.rs  pcp.rs  upnp.rs
crates/portmap/tests/: fuzz.rs  golden.rs  mapper.rs
crates/proto/: Cargo.toml
crates/proto/src/: admin.rs  blob.rs  board.rs  chat.rs  codec.rs  directory.rs  dm.rs  error.rs  filelib.rs  frame.rs  hello.rs  keybundle.rs  lib.rs  persona.rs  presence.rs  radio.rs  registry.rs  session.rs  swarm.rs  transfer.rs  version.rs  welcome.rs  wish.rs
crates/proto/tests/: registry.rs  wire-registry.golden
crates/radio/: Cargo.toml
crates/radio/src/: controller.rs  error.rs  lib.rs  playlist.rs  queue.rs  registry.rs  track.rs
crates/reticulum/: Cargo.toml
crates/reticulum/src/: announce.rs  batch.rs  crypto.rs  destination.rs  floodfill.rs  identity.rs  lib.rs  link.rs  lxmf.rs  packet.rs  tunnel.rs
crates/screen/: Cargo.toml
crates/screen/src/: color.rs  lib.rs  menu.rs  screen.rs
crates/server-core/: Cargo.toml
crates/server-core/src/: auth.rs  boards.rs  bus.rs  chat.rs  classes.rs  config.rs  dedup.rs  events.rs  federation.rs  files.rs  keybundle.rs  lib.rs  moderation.rs  permissions.rs  presence.rs  pushlog.rs  ratelimit.rs  swarm.rs  theme.rs
crates/server-core/tests/: permissions_prop.proptest-regressions  permissions_prop.rs
crates/store-client/: Cargo.toml
crates/store-client/src/: boards.rs  lib.rs  transfers.rs
(+160 files in other folders)
