[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/core",
    "crates/server-core",
    "crates/net",
    "crates/identity",
    "crates/e2ee",
    "crates/blobs",
    "crates/store-server",
    "crates/store-client",
    "crates/swarm",
    "crates/federation",
    "crates/reticulum",
    "crates/art",
    "crates/screen",
    "crates/audio",
    "crates/radio",
    "crates/legacy-doors",
    "crates/legacy-hotline",
    "crates/legacy-telnet",
    "crates/legacy-finger",
    "crates/legacy-nntp",
    "crates/legacy-ftn",
    "crates/legacy-qwk",
    "crates/legacy-zmodem",
    "crates/legacy-binkp",
    "crates/legacy-icecast",
    "crates/legacy-syndication",
    "crates/ui-web",
    "apps/cli",
    "apps/tui",
    "apps/server",
    "apps/server-tui",
    "apps/tracker",
]

[workspace.package]
version = "0.16.0"
edition = "2021"
rust-version = "1.85"
authors = ["RabbitHole contributors"]
repository = "https://github.com/kevinelliott/RabbitHole"
# license: TBD — see PLAN.md §16 (owner deciding)
publish = false

[workspace.dependencies]
# internal
rabbithole-proto = { path = "crates/proto" }
rabbithole-core = { path = "crates/core" }
rabbithole-server-core = { path = "crates/server-core" }
rabbithole-net = { path = "crates/net" }
rabbithole-identity = { path = "crates/identity" }
rabbithole-e2ee = { path = "crates/e2ee" }
rabbithole-blobs = { path = "crates/blobs" }
rabbithole-store-server = { path = "crates/store-server" }
rabbithole-store-client = { path = "crates/store-client" }
rabbithole-swarm = { path = "crates/swarm" }
rabbithole-federation = { path = "crates/federation" }
rabbithole-reticulum = { path = "crates/reticulum" }
rabbithole-art = { path = "crates/art" }
rabbithole-screen = { path = "crates/screen" }
rabbithole-audio = { path = "crates/audio" }
rabbithole-radio = { path = "crates/radio" }
rabbithole-legacy-doors = { path = "crates/legacy-doors" }
rabbithole-legacy-hotline = { path = "crates/legacy-hotline" }
rabbithole-legacy-telnet = { path = "crates/legacy-telnet" }
rabbithole-legacy-finger = { path = "crates/legacy-finger" }
rabbithole-legacy-nntp = { path = "crates/legacy-nntp" }
rabbithole-legacy-ftn = { path = "crates/legacy-ftn" }
rabbithole-legacy-qwk = { path = "crates/legacy-qwk" }
rabbithole-legacy-zmodem = { path = "crates/legacy-zmodem" }
rabbithole-legacy-binkp = { path = "crates/legacy-binkp" }
rabbithole-legacy-icecast = { path = "crates/legacy-icecast" }
rabbithole-legacy-syndication = { path = "crates/legacy-syndication" }

# serialization
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std"] }

# errors
thiserror = "2"
anyhow = "1"

# async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
async-trait = "0.1"
bytes = "1"

# networking
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
rcgen = "0.13"
tokio-tungstenite = "0.26"

# crypto & identity
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
argon2 = "0.5"
blake3 = "1"
bao-tree = "0.16"
range-collections = "0.4"
positioned-io = { version = "0.3", default-features = false }
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
subtle = "2"
zeroize = "1"
rand = "0.8"
rand_core = "0.6"
getrandom = "0.2"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
data-encoding = "2"

# storage
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "sqlite", "macros", "migrate", "chrono"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
toml = "0.8"
serde_json = "1"
dirs = "5"
proptest = "1"
ulid = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
hex = "0.4"
tempfile = "3"
parking_lot = "0.12"
png = "0.17"

# frontends
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# wasm (browser SPA transport — target-gated in the consuming crates)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Event",
    "CloseEvent",
] }
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 1
