[package]
name = "rabbit"
description = "RabbitHole command-line client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rabbithole-proto.workspace = true
rabbithole-net.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
