[package]
name = "rabbit"
description = "RabbitHole command-line client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rabbithole-proto.workspace = true
rabbithole-core = { workspace = true, features = ["native"] }
rabbithole-identity.workspace = true
rabbithole-store-client.workspace = true
rabbithole-swarm.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
hex.workspace = true
