[package]
name = "burrow-tui"
description = "Burrow sysop console (ratatui)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "burrow-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
