[package]
name = "burrow"
description = "The RabbitHole server daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "burrow"
path = "src/lib.rs"

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
rabbithole-proto.workspace = true
postcard.workspace = true
blake3.workspace = true
rabbithole-net.workspace = true
rabbithole-identity.workspace = true
rabbithole-blobs.workspace = true
rabbithole-server-core.workspace = true
rabbithole-store-server.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
hex.workspace = true
rustls-pki-types.workspace = true

[dev-dependencies]
data-encoding.workspace = true
rabbithole-core = { workspace = true, features = ["native"] }
tempfile.workspace = true
