[package]
name = "burrow"
description = "The RabbitHole server daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "burrow"
path = "src/lib.rs"

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
rabbithole-proto.workspace = true
postcard.workspace = true
blake3.workspace = true
rabbithole-net.workspace = true
rabbithole-identity.workspace = true
rabbithole-federation.workspace = true
rabbithole-blobs.workspace = true
rabbithole-server-core.workspace = true
rabbithole-store-server.workspace = true
rabbithole-swarm.workspace = true
rabbithole-legacy-doors.workspace = true
rabbithole-legacy-telnet.workspace = true
rabbithole-legacy-finger.workspace = true
rabbithole-legacy-nntp.workspace = true
rabbithole-legacy-hotline.workspace = true
rabbithole-legacy-ftn.workspace = true
rabbithole-legacy-binkp.workspace = true
rabbithole-legacy-syndication.workspace = true
rabbithole-audio.workspace = true
rabbithole-radio.workspace = true
rabbithole-legacy-icecast.workspace = true
async-trait.workspace = true
anyhow.workspace = true
clap.workspace = true
parking_lot.workspace = true
serde.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
hex.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
data-encoding.workspace = true
rabbithole-core = { workspace = true, features = ["native"] }
rabbithole-legacy-hotline.workspace = true
rabbithole-store-client.workspace = true
serde_json.workspace = true
tempfile.workspace = true
