[package]
name = "looking-glass"
description = "Looking Glass: the RabbitHole tracker/directory service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "looking_glass"
path = "src/lib.rs"

[[bin]]
name = "looking-glass"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
postcard.workspace = true
rabbithole-identity.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
