[package]
name = "rabbit-tui"
description = "RabbitHole terminal client (ratatui)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "rabbit-tui"
path = "src/main.rs"

[dependencies]
rabbithole-proto.workspace = true
rabbithole-core = { workspace = true, features = ["native"] }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[dev-dependencies]
# Embedded Looking Glass for the #[ignore]d server-browser smoke test only
# (lib API, no tracker binary). No cycle: the tracker never depends on the
# TUI or anything that does.
looking-glass = { path = "../tracker" }
