[package]
name = "rabbithole-audio"
description = "Transport-agnostic audio core for radio: PCM frames, mixing, station fan-out, jitter buffering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
