[package]
name = "rabbithole-blobs"
description = "Content-addressed blob store (blake3-pathed, refcounted)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
thiserror.workspace = true
serde.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
