[package]
name = "rabbithole-core"
description = "Client-side domain core: the Command/Event API every frontend drives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rabbithole-proto.workspace = true
postcard.workspace = true
ed25519-dalek = { version = "2", default-features = false }
serde.workspace = true
thiserror.workspace = true

# native (non-wasm) session driver
rabbithole-net = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
native = ["dep:rabbithole-net", "dep:tokio"]

[dev-dependencies]
rabbithole-identity.workspace = true
