[package]
name = "rabbithole-core"
description = "Client-side domain core: the Command/Event API every frontend drives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rabbithole-proto.workspace = true
rabbithole-e2ee.workspace = true
postcard.workspace = true
ed25519-dalek = { version = "2", default-features = false }
rand_core.workspace = true
serde.workspace = true
thiserror.workspace = true

# native (non-wasm) session driver
rabbithole-net = { workspace = true, optional = true }
rabbithole-store-client = { workspace = true, optional = true }
# The native client signs identity-key challenges (KeyProof); identity's argon2/
# totp tree is heavy, so it's native-only and never reaches the wasm SPA build.
rabbithole-identity = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }

[features]
default = []
native = [
    "dep:rabbithole-net",
    "dep:rabbithole-store-client",
    "dep:rabbithole-identity",
    "dep:tokio",
    "dep:blake3",
]

[dev-dependencies]
rand.workspace = true
