[package]
name = "rabbithole-e2ee"
description = "End-to-end encryption core for RabbitHole DMs: X25519, Double Ratchet, X3DH-lite, sealed sender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
blake3.workspace = true
zeroize.workspace = true
rand_core.workspace = true

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true
