[package]
name = "rabbithole-legacy-doors"
description = "Door-game drop files + session-runner model: DoorContext, DOOR.SYS/DORINFO1.DEF/DOOR32.SYS codecs, registry, node pool, session FSM, I/O bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
toml.workspace = true
