[package]
name = "rabbithole-legacy-telnet"
description = "Telnet BBS surface: IAC negotiation (ECHO/SGA/NAWS/TTYPE), line IO, login shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
rabbithole-art.workspace = true
