[package]
name = "rabbithole-screen"
description = "Backend-agnostic text-UI surface: renders a cell buffer to UTF-8 or CP437/ANSI wire bytes (TUI + telnet BBS)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rabbithole-art = { workspace = true }
