[package]
name = "rabbithole-server-core"
description = "Server domain logic: sessions, presence, permissions, and the event bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rabbithole-proto.workspace = true
rabbithole-identity.workspace = true
rabbithole-legacy-doors.workspace = true
rabbithole-store-server.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
chrono.workspace = true
toml.workspace = true
hex.workspace = true
postcard.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
